add annotation + refactoring
